# schedule_bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  install_docker.sh  loader.py  mypy.ini  pyproject.toml  requirements.txt  users.txt
.github/workflows/: action.yml  main.yml
app/: __init__.py  __main__.py  config.py  loader.py  main.py
app/constants/: convert.py
app/data/: convert.py  messages.py
app/enums/: __init__.py  fuckult.py  lessons.py  schedule.py  week.py
app/filters/: __init__.py  is_admin.py  is_day.py  is_group.py  is_registered.py  is_teacher.py
app/handlers/: __init__.py  base.py  start.py
app/keyboards/: __init__.py  inline.py  reply.py
app/middlewares/: __init__.py  acl.py  chatbaser.py  database.py  repo.py  throttling.py
app/models/: base.py  chat.py  classroom.py  classtime.py  fuckult.py  group.py  lesson.py  lessons.py  teacher.py  timetable.py  user.py  week.py
app/schedule_requests/: api.py  api_group.py  (+1 more)
data/: convert.py  messages.py
enums/: lessons.py  week.py
filters/: __init__.py  is_admin.py  is_day.py  is_group.py  is_registered.py  is_teacher.py
handlers/: __init__.py
middlewares/: __init__.py  acl.py  chatbaser.py  stats.py
migrations/: env.py
models/: lessons.py  schedule.py  week.py
schedule_requests/: api.py  api_group.py  api_prepod.py  client_group.py  client_prepod.py  group_client.py
scripts/: docker-entrypoint.sh
states/: __init__.py  admin_state.py  user_state.py
utils/: __init__.py  notify_admins.py  set_bot_commands.py
(+105 files in other folders)
